Implemented moveCard with a very simple trial algorithm. Also added amountOfCards and cloneGamestate needed for planned implementation of a more advanced algorithm.